src/test/ui/parser/issue-10392-2.rs
struct A { foo: isize }

fn a() -> A { panic!() }

fn main() {
    let A { .., } = a(); //~ ERROR: expected `}`
}
